Stopped slide headings overlapping close button

--- a/css/core.styl
+++ b/css/core.styl
@@ -311,6 +311,10 @@ spinner-weight = 20px;
 		h2
 			opacity: 0.6
 			
+		h1, h2
+			// Stop overlaping close close closebutton
+			max-width: 70%
+			
 		ul.skills
 			margin: 1rem 0
 			list-style: none
